--- a/travel/templates/travel/graphs.html
+++ b/travel/templates/travel/graphs.html
@@ -62,25 +62,27 @@
                                 
                                 {# Just to simulate the left hand bar #}
                                 <div class="col-xs-0 tile_stats_count"></div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
+
+                                {# obs: bootstrap 3 does not support col-xl-* classes, but bootstrap 4 does. #}
+                                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-clock-o"></i> Tiempo de Viaje</span>
                                     <div class="count">35.91 min</div>
                                     <span class="count_bottom">Mayor tiempo de viaje <i class="red">227 min</i></span>
                                 </div>
 
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
+                                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-list-ol"></i> Cantidad de Etapas</span>
                                     <div class="count">1.34 etapas</div>
                                     <span class="count_bottom">Mayor cantidad de etapas <i class="red">7</i></span>
                                 </div>
 
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
+                                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-road"></i> Distancia Euclideana</span>
                                     <div class="count">7.9 km</div>
                                     <span class="count_bottom">Mayor distancia <i class="red">37.2 km</i></span>
                                 </div>
 
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
+                                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-road"></i> Distancia en Ruta</span>
                                     <div class="count">9.8 km</div>
                                     <span class="count_bottom">Mayor distancia <i class="red">78.1 km</i></span>
@@ -100,9 +102,11 @@
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?
-                            <small></small>
-                        </h2>
+                        <h2><i class="fa fa-tasks"></i> ¿Qué desea visualizar?</h2>
+                        <ul class="nav navbar-right panel_toolbox">
+                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                            </li>
+                        </ul>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
