--- a/travel/templates/travel/graphs.html
+++ b/travel/templates/travel/graphs.html
@@ -52,9 +52,9 @@
                                 <span class="count_top">
                                     <i class="fa fa-bus"></i> Cantidad de Viajes
                                 </span>
-                                <div class="count">3518519</div>
+                                <div class="count" id="indicator-viajes">-</div>
                                 <span class="count_bottom">
-                                    <i class="green">2613090</i> Viajes sin expandir
+                                    <i class="green" id="indicator-documentos">-</i> Viajes sin expandir
                                 </span>
                             </div>
 
@@ -66,26 +66,26 @@
                                 {# obs: bootstrap 3 does not support col-xl-* classes, but bootstrap 4 does. #}
                                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-clock-o"></i> Tiempo de Viaje</span>
-                                    <div class="count">35.91 min</div>
-                                    <span class="count_bottom">Mayor tiempo de viaje <i class="red">227 min</i></span>
+                                    <div class="count" id="indicator-tviaje-avg">- min</div>
+                                    <span class="count_bottom">Mayor tiempo de viaje <i class="red" id="indicator-tviaje-max">- min</i></span>
                                 </div>
 
                                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-list-ol"></i> Cantidad de Etapas</span>
-                                    <div class="count">1.34 etapas</div>
-                                    <span class="count_bottom">Mayor cantidad de etapas <i class="red">7</i></span>
+                                    <div class="count" id="indicator-netapas-avg">- etapas</div>
+                                    <span class="count_bottom">Mayor cantidad de etapas <i class="red" id="indicator-netapas-max">-</i></span>
                                 </div>
 
                                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-road"></i> Distancia Euclideana</span>
-                                    <div class="count">7.9 km</div>
-                                    <span class="count_bottom">Mayor distancia <i class="red">37.2 km</i></span>
+                                    <div class="count" id="indicator-dist-eucl-avg">- km</div>
+                                    <span class="count_bottom">Mayor distancia <i class="red" id="indicator-dist-eucl-max">- km</i></span>
                                 </div>
 
                                 <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6 col-xs-12 tile_stats_count">
                                     <span class="count_top"><i class="fa fa-road"></i> Distancia en Ruta</span>
-                                    <div class="count">9.8 km</div>
-                                    <span class="count_bottom">Mayor distancia <i class="red">78.1 km</i></span>
+                                    <div class="count" id="indicator-dist-ruta-avg">- km</div>
+                                    <span class="count_bottom">Mayor distancia <i class="red" id="indicator-dist-ruta-max">- km</i></span>
                                 </div>
 
                             </div>
