--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -30,7 +30,7 @@
     {% include "./titlebar.html" with titlename="Mapa de Viajes" %}
         {% include "./filters.html" %}
 
-        <div class="row">
+        <div class="row cols-same-height">
 
             {# Selection Bar #}
             <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
@@ -42,10 +42,6 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        
-                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                            <p>Nota: Todos los conteos de viajes NO consideran factor de expansión.</p>
-                        </div>
 
                         <div class="col-md-12 col-sm-12 col-xs-12 form-group">
                             <label class="control-label" for="sectorSelector">Sector de Destino:</label>
@@ -67,7 +63,7 @@
                 <div class="x_panel">
                     <div class="x_title">
                         <h2><i class="fa fa-map-o"></i> <span id="mapTitle">Mapa</span>
-                            <small><strong id="visualization_type_doc_count">0</strong> viajes encontrados</small>
+                            <span id="visualization_doc_count">0</span> <span id="visualization_doc_count_txt">datos</span>
                         </h2>
                         <div class="clearfix"></div>
                     </div> 
