travel: Color scale selector for map views

--- a/travel/static/travel/css/large.css
+++ b/travel/static/travel/css/large.css
@@ -42,3 +42,12 @@
 .netapas_checkbox_div span {
     margin-left: 10px;
 }
+
+.colorscale_checkbox_div {
+    padding: 5px 0px;
+    margin-left: 20px;
+}
+
+.colorscale_checkbox_div span {
+    margin-left: 10px;
+}
