--- a/travel/templates/travel/graphs.html
+++ b/travel/templates/travel/graphs.html
@@ -105,10 +105,12 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <div class="col-md-12 col-sm-12 col-xs-12 form-group">
-                            <label class="control-label" for="vizSelector">Variable a mostrar:</label>
-                            <select class="form-control" id='vizSelector' style="width: 100%">
-                            </select>
+                        <div class="row viz-option-row">
+                            <div class="col-md-12 col-sm-12 col-xs-12 form-group">
+                                <label class="control-label" for="vizSelector">Variable a mostrar:</label>
+                                <select class="form-control" id='vizSelector' style="width: 100%">
+                                </select>
+                            </div>
                         </div>
                     </div>
                 </div>
