--- a/travel/templates/travel/large.html
+++ b/travel/templates/travel/large.html
@@ -46,38 +46,52 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
-                            <label>Cantidad de Etapas:</label>
-                            <p class="text-warning">*Esto aplicará los filtros seleccionados.</p>
-                        </div>
-                        <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
-                            <div class="netapas_checkbox_div">
-                                <input id="netapas_1" type="checkbox" class="netapas_checkbox" data-ne-str="1" />
-                                <span class="control-label">1 etapa</span>
+                        <div class="row viz-option-row">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
+                                <label>Cantidad de Etapas:</label>
+                                <p class="text-warning">*Esto aplicará los filtros seleccionados.</p>
+                            </div>
+                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
+                                <div class="netapas_checkbox_div">
+                                    <input id="netapas_1" type="checkbox" class="netapas_checkbox" data-ne-str="1" />
+                                    <span class="control-label">1 etapa</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
+                                <div class="netapas_checkbox_div">
+                                    <input id="netapas_2" type="checkbox" class="netapas_checkbox" data-ne-str="2" />
+                                    <span class="control-label">2 etapas</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
+                                <div class="netapas_checkbox_div">
+                                    <input id="netapas_3" type="checkbox" class="netapas_checkbox" data-ne-str="3" />
+                                    <span class="control-label">3 etapas</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
+                                <div class="netapas_checkbox_div">
+                                    <input id="netapas_4" type="checkbox" class="netapas_checkbox" data-ne-str="4" checked />
+                                    <span class="control-label">4 etapas</span>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
+                                <div class="netapas_checkbox_div">
+                                    <input id="netapas_5_or_more" type="checkbox" class="netapas_checkbox" data-ne-str="5+" checked />
+                                    <span class="control-label">5+ etapas</span>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
-                            <div class="netapas_checkbox_div">
-                                <input id="netapas_2" type="checkbox" class="netapas_checkbox" data-ne-str="2" />
-                                <span class="control-label">2 etapas</span>
+                        <div class="row viz-option-row">
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 form-group">
+                                <label>Escala de colores:</label>
                             </div>
-                        </div>
-                        <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
-                            <div class="netapas_checkbox_div">
-                                <input id="netapas_3" type="checkbox" class="netapas_checkbox" data-ne-str="3" />
-                                <span class="control-label">3 etapas</span>
-                            </div>
-                        </div>
-                        <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
-                            <div class="netapas_checkbox_div">
-                                <input id="netapas_4" type="checkbox" class="netapas_checkbox" data-ne-str="4" checked />
-                                <span class="control-label">4 etapas</span>
-                            </div>
-                        </div>
-                        <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
-                            <div class="netapas_checkbox_div">
-                                <input id="netapas_5_or_more" type="checkbox" class="netapas_checkbox" data-ne-str="5+" checked />
-                                <span class="control-label">5+ etapas</span>
+                            <div class="col-lg-12 col-md-4 col-sm-4 col-xs-6 form-group">
+                                <div class="colorscale_checkbox_div">
+                                    <span class="control-label">Divergente</span>
+                                    <input id="colorscale_checkbox" type="checkbox" />
+                                    <span class="control-label">Secuencial</span>
+                                </div>
                             </div>
                         </div>
                     </div>
