--- a/travel/templates/travel/map.html
+++ b/travel/templates/travel/map.html
@@ -119,30 +119,17 @@
     <script src="https://unpkg.com/leaflet@1.0.0-rc.3/dist/leaflet.js"></script>
 
     <script>
-        // localinfo.timeperiod JSON serialized data.
-        var _allSectors = JSON.parse("{{ sectors|escapejs }}");
-        var _allDaytypes = JSON.parse("{{ daytypes|escapejs }}");
-        var _allPeriods = {{ timeperiods|safe }};
-        var _allHalfhours = {{ halfhours|safe }};
-        var _allCommunes = {{ communes|safe }};
-        var _allTimeperiods = {{ timeperiods|safe }};
-        // console.log(_allDaytypes);
-        // console.log(_allCommunes);
-        // console.log(_allHalfhours);
-        // console.log(_allTimeperiods);
-        // console.log(_allSectors);
-
-        var _dayTypes = {
-            0: "Laboral",
-            1: "Sábado",
-            2: "Domingo"
-        };
-
-        var _dayTypes_reversed = {
-            "Laboral": 0,
-            "Sábado": 1,
-            "Domingo": 2
-        };
+        var ws_data = {};
+        ws_data._day_types = JSON.parse("{{ daytypes|escapejs }}");
+        ws_data._TS_periods = {{ timeperiods|safe }};
+        ws_data._half_hours = {{ halfhours|safe }};
+        ws_data._communes = {{ communes|safe }};
+        ws_data._map_sectors = JSON.parse("{{ sectors|escapejs }}");
+        // console.log(ws_data._day_types);
+        // console.log(ws_data._TS_periods);
+        // console.log(ws_data._half_hours);
+        // console.log(ws_data._communes);
+        // console.log(ws_data._map_sectors);
     </script>
 
     <script src="{% static "travel/js/util.js" %}"></script>
