--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -49,7 +49,7 @@
                 <ul class="nav child_menu">
                   <li><a href=" {% url "profile:expedition" %} "> Por expedición</a></li>
                   <li><a href=" {% url "profile:stop" %} "> Por parada</a></li>
-                  <li><a href=" {% url "profile:trayectory" %} "> Trayectoria</a></li>
+                  <li><a href=" {% url 'profile:trajectory' %} "> Trayectoria</a></li>
                 </ul>
               </li>
               <li><a><i class="fa fa-tachometer"></i> Velocidades <span class="fa fa-chevron-down"></span></a>
