fixed label interval

--- a/profile/templates/profile/byExpedition.html
+++ b/profile/templates/profile/byExpedition.html
@@ -31,7 +31,7 @@
   </div>
 
   <div class="row">
-    {% panel "fa-clock-o" "Expediciones por hora" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
+    {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
     {% columns 4 4 4 panel1 %}
 
     {% panel "fa-truck" 'Expediciones por patente <strong id="licensePlateNumber">(0)</strong>' '<div id="wordcloudChart1" style="height:50px;"></div>' as panel2 %}
