--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -32,14 +32,17 @@
   </div>
 
   <div class="row">
-  <div class="col-md-12 col-sm-12 col-xs-12">
+    {% panel "fa-clock-o" "Expediciones por hora de inicio" '<div id="timePeriodChart" style="height:50px;"></div>' as panel1 %}
+    {% columns 4 4 4 panel1 %}
 
-    {% with barChart='<div id="barChart" style="height:400px;"></div>' resume1='<h4><i class="fa fa-clock-o"></i> Expediciones por hora</h4><div id="timePeriodChart" style="height:89px;"></div>' resume2='<h4><i class="fa fa-truck"></i> Expediciones por patente <strong id="licensePlateNumber">(N)</strong></h4><div id="wordcloudChart1" style="height:170px;"></div>' resume3='<h4><i class="fa fa-calendar"></i> Expediciones por tipo de día</h4><div id="wordcloudChart2" style="height:30px;"></div>' %}
-      {% columns 9 9 12 barChart as col6 %}
-      {% columns 3 3 12 resume1|add:resume2|add:resume3 as col7 %}
-      {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" col6|add:col7 %}
-    {% endwith %}
-  </div>
+    {% panel "fa-truck" 'Expediciones por patente <strong id="licensePlateNumber">(0)</strong>' '<div id="wordcloudChart1" style="height:50px;"></div>' as panel2 %}
+    {% columns 4 4 4 panel2 %}
+
+    {% panel "fa-calendar" "Expediciones por tipo de día" '<div id="wordcloudChart2" style="height:50px;"></div>' as panel3 %}
+    {% columns 4 4 4 panel3 %}
+
+    {% panel "fa-bar-chart" "Perfil de carga <small>para <strong id='expeditionNumber'>N</strong> expediciones</small>" '<div id="barChart" style="height:400px;"></div>' as panel4 %}
+    {% columns 12 12 12 panel4 %}
   </div>
 
   <div class="row">
