added warning and changed label of period and half hour field

--- a/profile/templates/profile/byStop.html
+++ b/profile/templates/profile/byStop.html
@@ -1,5 +1,5 @@
 {% extends 'profile/base.html' %}
-{% load static header panel inline_select columns update_button table %}
+{% load static header panel inline_select columns update_button table label %}
 
 {% block title %}Perfil de carga por parada{% endblock %}
 
@@ -18,16 +18,19 @@
       {% inline_select "Tipo de día:" "dayTypeFilter" dayTypes True as dayType_select %}
       {% columns 2 2 12 dayType_select as col3 %}
 
-      {% inline_select "Período:" "periodFilter" periods True as period_select %}
+      {% inline_select "Período de pasada:" "periodFilter" periods True as period_select %}
       {% columns 2 2 12 period_select as col4 %}
 
-      {% inline_select "Media hora:" "minutePeriodFilter" minutes True as half_hour_select %}
+      {% inline_select "Media hora de pasada:" "minutePeriodFilter" minutes True as half_hour_select %}
       {% columns 2 2 12 half_hour_select as col5 %}
 
-      {% update_button "btnUpdateChart" "Actualizar datos" as update_button %}
-      {% columns 12 12 12 update_button as col6 %}
+      {%  label "OBSERVACIÓN: Los datos mostrados a continuación no consideran evasión." "warning" as label %}
+      {% columns 12 12 12 label as col6 %}
 
-      {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5|add:col6 %}
+      {% update_button "btnUpdateChart" "Actualizar datos" as update_button %}
+      {% columns 12 12 12 update_button as col7 %}
+
+      {% panel "fa-filter" "Filtro" col1|add:col2|add:col3|add:col4|add:col5|add:col6|add:col7 %}
     </div>
   </div>
 
