added globalstat app with first view

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -74,6 +74,14 @@
                     {# <li><a href=" {% url "travel:data" %} ">Datos</a></li> #}
                 </ul>
               </li>
+              <li>
+                <a><i class="fa fa-clone"></i> Est. globales<span
+                    class="fa fa-chevron-down"></span></a>
+                <ul class="nav child_menu">
+                    <li><a href=" {% url "globalstat:show" %} ">Resumen</a></li>
+                    <li><a href=" {% url "globalstat:data" %} ">Datos</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
