added detail link

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -79,6 +79,7 @@
                     class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
                     <li><a href=" {% url "globalstat:show" %} ">Resumen</a></li>
+                    <li><a href=" {% url "globalstat:detail" %} ">Detalle</a></li>
                     <li><a href=" {% url "globalstat:data" %} ">Datos</a></li>
                 </ul>
               </li>
