resume show to resume and added day number

--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -78,7 +78,7 @@
                 <a><i class="fa fa-clone"></i> Est. globales<span
                     class="fa fa-chevron-down"></span></a>
                 <ul class="nav child_menu">
-                    <li><a href=" {% url "globalstat:show" %} ">Resumen</a></li>
+                    <li><a href=" {% url "globalstat:resume" %} ">Resumen</a></li>
                     <li><a href=" {% url "globalstat:detail" %} ">Detalle</a></li>
                     <li><a href=" {% url "globalstat:data" %} ">Datos</a></li>
                 </ul>
