--- a/globalstat/templates/globalstat/resume.html
+++ b/globalstat/templates/globalstat/resume.html
@@ -1,7 +1,7 @@
 {% extends 'globalstat/base.html' %}
 {% load static header panel inline_select table columns update_button label button %}
 
-{% block title %}Detalle de estadística global{% endblock %}
+{% block title %}Estadísticas globales por período{% endblock %}
 
 {% block css %}
     {% with "components/gentelella/vendors/" as gentelella_static %}
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-  {% header "Estadística global" %}
+  {% header "Estadísticas globales por período" %}
 
   <div class="row">
     <div class="col-md-12 col-sm-12 col-xs-12">
